# gaffe

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run_mypy.py
gaffe/: __init__.py  error.py  mypy.py  raises.py
mypy_test/: test.py
tests/: test_error.py
